<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        tools:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/about_text_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/github_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/github_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#059C8F"
        android:textSize="18sp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/about_text_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <FrameLayout
        android:id="@+id/github_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>